--- a/src/template.html
+++ b/src/template.html
@@ -254,6 +254,8 @@
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
+            You can contact my by using this mail
+            <br>
             sk470004@gmail.com
 
           </p>
